--- a/CSS/style.css
+++ b/CSS/style.css
@@ -61,8 +61,17 @@
 }
 .thumb-image {
     overflow: hidden;
+    filter: opacity(0.2);
 }
 .thumb-image img {
     height: 100%;
     overflow: hidden;
+    
+}
+.thumb-image:hover {
+    filter: none;
+}
+.thumb-active {
+    filter: none;
+    border: 2px solid white;
 }
